[project]
name = "mybooking_client"
version = "0.0.1"
authors = [
  { name="Mybooking", email="juan.miqueo@mybooking.es" },
]
description = "Mybooking HTTP Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/mybooking-es/mybooking-python-client"
"Bug Tracker" = "https://github.com/mybooking-es/mybooking-python-client/issues"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"